# ornery-bot

./: .gitignore  Cargo.toml  README.md
src/: client_data.rs  consts.rs  db.rs  dumb_error.rs  error_with_reason.rs  help.md  hooks.rs  main.rs  serde_conversions.rs
src/client_data/: emoji_data.rs  guild_data.rs
src/commands/: checks.rs  help.rs  hooks.rs  mod.rs
src/commands/emoji/: mod.rs
src/commands/general/: mod.rs
src/commands/math/: mod.rs
src/commands/owner/: mod.rs
src/commands/test/: mod.rs
src/commands/webtoon/: mod.rs
src/commands/whois/: mod.rs
