[package]
name = "ornery-bot"
version = "0.1.0"
authors = ["SheepTester <ussa.say@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
dotenv = "0.15.0"
reqwest = "0.10.8"
serde_json = "1.0"
csv = "1.1"
