[package]
name = "ornery-bot"
version = "1.0.1"
authors = ["SheepTester <ussa.say@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.10.9"
serde_json = "1.0"
csv = "1.1"
regex = "1"
lazy_static = "1.4.0"

[dependencies.serenity]
version = "0.9"
features = ["cache", "framework", "standard_framework"]

[dependencies.mongodb]
version = "1.1.1"

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]
